--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -193,7 +193,7 @@ PrivatePub.subscribe("/enquiries/" + current_user.id.to_s, function(data, channe
      <td class="brgr" style="padding-right:15px" valign="top" align="left">
       <%= yield %>
      </td>
-     <td valign="top">
+     <td valign="top" width="10">
         <%= image_tag "/images/icons/exchange.png",{width: "20", onclick: "toggleRightPanel();"} %>
      </td>
      <td id="right-panel" valign="top" align="left">
