--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -191,9 +191,13 @@ $(function(){
         <% end %>
         </li>
         <li id="calendarMM">
-        <img src="/images/icons/org_calender.png" id="iconMM7"width="36" /><br/>
-        <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
-        <a href="#">Calendar</a></li>
+            <%= link_to "/follow_ups" do %>
+              <img src="/images/icons/org_calender.png" id="iconMM11"width="36" /><br/>
+              <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
+              Calendar
+            
+            <% end %>
+        </li>
         <li id="reportsMM">
         <img src="/images/icons/org_reports.png" id="iconMM8"width="36" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
