--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -644,8 +644,8 @@ border:1px solid #3D3D3D;background:#3D3D3D;color:#FFFFFF;padding:5px;line-heigh
 /* NOTIFICATION - ENDS*/
 
 /* Hover preview - Starts */
-#preview{line-height:1em;border:1px solid #DADADA;padding:10px;color:#222;display:none;position:absolute;z-index:100000000000;font-size:13px;
-background:#fff;line-height:1.6em;filter:alpha(opacity=100);-moz-opacity: 1;opacity: 1;box-shadow:2px 2px 5px #888888;cursor:pointer;min-width:150px;max-width:340px;border-radius:4px;max-height:300px;overflow:auto}
+#preview{line-height:1em;border:1px solid #ccc;padding:10px;color:#222;display:none;position:absolute;z-index:100000000000;font-size:13px;
+background:#fff;line-height:1.6em;filter:alpha(opacity=100);-moz-opacity: 1;opacity: 1;box-shadow:0px 0px 10px #888888;cursor:pointer;min-width:150px;max-width:340px;border-radius:4px;max-height:300px;overflow:auto;}
 
 /* Hover preview - Ends */
 
