--- a/app/views/handle/cancan.html.erb
+++ b/app/views/handle/cancan.html.erb
@@ -7,6 +7,13 @@ $(function(){
 
 </script>
 
-<div id="cancan_error" class="addNewPop" style="display: block; top: 483px; left: 455px;"> 
-  <h2><%= @msg %></h2>
+<div id="cancan_error" class="addNewPop box-theme-ch theme-ls" style="display: block; top: 483px; left: 455px;"> 
+  <h2><%= flash[:notice] %></h2>
+  <br/>
+  <h4>Goto? </h4>
+
+  <%= link_to "Enquiries", enquiries_path %> | 
+  <%= link_to "Registraions", registrations_path %> | 
+  <%= link_to "My Account", current_user %></br>
+  
 </div>
