--- a/app/views/todos/_show_hover.html.erb
+++ b/app/views/todos/_show_hover.html.erb
@@ -5,7 +5,7 @@ Todo
 <ul class="vlsdet">
    <li><label>Topic </label>: <%= @todo.topic.name rescue "Unknown" %></li>
    <li><label>Status </label>: <%= @todo.status.name rescue "Unknown" %></li>
-   <li><label>Due Date </label>: <%= @todo.duedate.strftime("%F %R %p") %></li>
+   <li><label>Due Date </label>: <%= @todo.duedate.strftime("%F %R %p") rescue "Unknown" %></li>
    <li><label>Priority </label>: <%= @todo.priority %></li>
     <li><label>Assigned To </label>: <%= @todo.ato %></li>
    <li><label>Assigned By </label>: <%= @todo.aby %></li>
