--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,11 +7,6 @@ $(function(){
 
   $('li.all_users').addClass('active-tab');
   
-   $('tr.user_name').hover(function(){
-    $('span.delete_user').hide();
-    $(this).find('span.delete_user').show();
-  });
-  
 });
 
 </script>
@@ -24,7 +19,7 @@ $(function(){
         <h4 >
         Organizor Users
         </h4>
-		</div>
+</div>
         <br/>
 <table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
                  <thead>
@@ -34,23 +29,24 @@ $(function(){
                                         <th>Role</th>
                                         <th>Invitation</th>
                                         <th>State</th>
+                                        <th>Delete</th>
                   </tr>
                 </thead>
                 <tbody>
 
         <% @users.each do |user| %>
-          <tr class="user_name" onclick="window.open('/users/<%= user.id %>','_self',false);">
-            <td ><%= user.first_name %>
-            <span class="delete_user" style="display:none">
-                &nbsp;&nbsp;&nbsp;
-                <%= link_to 'delete',user, method: :delete, data: { confirm: 'Are you sure?' } %>
-           </span>
-            </td>
+          <% un = user.first_name.nil? ? "Mr. Unknown" : user.first_name %>
+          <tr>
+            <td><%= link_to un,user  %></td>
             <td><b><%= user.email %></b></td>
             <td><%= user.role.name.titleize rescue "Unassigned" %></td>
             <td><%= user.confirmed_at ? "Accepted" : "Not Accepted" %></td>
             <td><b><%= user.active_for_authentication? ? "Active" : "Inactive" %></b></td>
+            <td>
+            <%= link_to image_tag("/images/icons/del.png"),user, method: :delete, data: { confirm: 'Are you sure?' }  %>
+            </td>
           </tr>
+
         <% end %>
         <tr>
           <td colspan="7" align="left"></td>
