--- a/app/views/users/invitations/edit.html.erb
+++ b/app/views/users/invitations/edit.html.erb
@@ -29,39 +29,39 @@ $('#fade').cycle();
           <%= devise_error_messages! %>
           <%= f.hidden_field :invitation_token %>
           <table cellpadding="5" cellspacing="5">
-		  <tr>
-		  <td align="left" valign="bottom" class="tw" width="150"><%= f.label :first_name %></td>
-		  <td align="left" valign="bottom" class="tw"><%= f.text_field :first_name %></td>
+          <tr>
+          <td align="left" valign="bottom" class="tw" width="150"><%= f.label :first_name %></td>
+          <td align="left" valign="bottom" class="tw"><%= f.text_field :first_name %></td>
           </tr>
           <tr>
-		  <td align="left" valign="bottom" class="tw" ><%= f.label :surname %></td>
-		  <td align="left" valign="bottom" class="tw">
+          <td align="left" valign="bottom" class="tw" ><%= f.label :surname %></td>
+          <td align="left" valign="bottom" class="tw">
           <%= f.text_field :surname %></td>
           </tr>
-		  
+          
           <tr>
-		  <td align="left" valign="bottom" class="tw" >
+          <td align="left" valign="bottom" class="tw" >
           <%= f.label :password %></td>
-		  <td align="left" valign="bottom" class="tw">
-          <%= f.text_field :password %></td>
+          <td align="left" valign="bottom" class="tw">
+          <%= f.password_field :password %></td>
           </tr>
           
-		  <tr>
-		  <td align="left" valign="bottom" class="tw" >
+          <tr>
+          <td align="left" valign="bottom" class="tw" >
           <%= f.label :retype_password %></td>
-		  <td align="left" valign="bottom" class="tw">
-          <%= f.text_field :password_confirmation %></td>
+          <td align="left" valign="bottom" class="tw">
+          <%= f.password_field :password_confirmation %></td>
           </tr>
-		  <tr>
-		  <td align="left" valign="bottom" class="tw" >
+          <tr>
+          <td align="left" valign="bottom" class="tw" >
           &nbsp;
-		  </td>
-		  <td align="center" valign="middle"   class="lb pad10">
-		<span class="th35">
-			 <%= f.submit 'Go', :class => "white-button"%>
-		</span>
-		</td>
-		</tr>
+          </td>
+          <td align="center" valign="middle">
+
+             <%= f.submit 'Set Now', :class => "fr" %>
+
+          </td>
+        </tr>
           </table>
           
           
