--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -24,25 +24,23 @@ $('#fade').cycle();
 <div id="bg1">
 <div id="login-box" style="width:450px">
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-<center><h2 style="color:#fff">Forgot Your Password?</h2></center>
+<center>
+<h2 style="color:#fff">Forgot Your Password?</h2>
+<h4>Enter your email and reset</h4>
+
+</center>
 <table cellpadding="10" cellspacing="0" width="100%">
 <tr>
-		  <td align="left" valign="bottom" class="tw" width="50">
-     <%= f.label :email %></td>
-		  <td align="left" valign="bottom" class="tw">
+     <td align="center">
      <%= f.text_field :email %>
-	 <div align="left" class="white-link">
-<%= render "devise/shared/links" %>
-</div>
-	 </td>
-          
-    <td align="center" valign="middle"  width="90" class="lb pad10">
-    <span class="th35">
-         <%= f.submit 'Reset', :class => "white-button"%>
-    </span>
+     <%= f.submit 'Reset'%>
+     <div align="center" class="white-link">
+      <%= render "devise/shared/links" %>
+     </div>
+     </td>
+     <td>
+       
     </td>
-
-
 </tr>
 </table>
 <% end %>
