--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -26,7 +26,7 @@ $('#fade').cycle();
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
 <center>
 <h2 style="color:#fff">Forgot Your Password?</h2>
-<h4>Enter your email and reset</h4>
+<h4 style="color:#fff">Enter your email and reset</h4>
 
 </center>
 <table cellpadding="10" cellspacing="0" width="100%">
